@@ -32,6 +32,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [export] Added Excel XLSX export module,
   thanks to Derek Schaefer
 + [core] Addded ability for tracking changes made through phpMyAdmin
++ rfe #2839504 [engines] Support InnoDB plugin's new row formats 
 
 3.2.2.0 (not yet released)
 - bug #2825293 [structure] Default value for a BIT column
